--- a/documents/mlk_text_mining.Rmd
+++ b/documents/mlk_text_mining.Rmd
@@ -2,11 +2,9 @@
 title: "Taking Text and Analyzing It"
 author: "Ryan Peek"
 date: "Updated: `r format(Sys.Date())`"
-output: 
-  html_document:
-    highlight: pygments
-    theme: yeti
-    keep_md: true
+output:
+  github_document
+always_allow_html: yes
 ---
 
 ```{r setup, include=FALSE}
